# really-fast-buttons

./: .gitmodules  Cargo.toml  README.md  rfb.code-workspace
.cargo/: config  config.toml
RFB-RTIC-atomic/src/: main.rs
RFB-RTIC-shared/: Cargo.toml
RFB-client/: README.md
RFB-client/src/: lib.rs
RFB-pac-blocking/src/: main.rs
RFB-proto/: Cargo.toml
RFB-proto/src/: error.rs  lib.rs
RTIC-atomic/: Cargo.toml  README.md
RTIC-atomic/src/: main.rs
RTIC-counter-peripheral/: Cargo.toml  Embed.toml  README.md  memory.x
RTIC-counter-peripheral/src/: main.rs
RTIC-queues/: Cargo.toml  README.md
RTIC-queues/src/: main.rs
RTIC-shared/: Cargo.toml  README.md
RTIC-shared/src/: main.rs
chatgpt-generated-1/: Cargo.toml  rust-toolchain.toml
chatgpt-generated-1/src/: main.rs
chatgpt-generated-2/.cargo/: config
chatgpt-generated-2/src/: main.rs
client/: Cargo.toml  README.md
client/src/: arguments.rs  interface.rs  lib.rs
embassy-select/: Cargo.toml
embassy-select-pathological/: Cargo.toml  README.md
embassy-select-pathological/src/: main.rs
embassy-select/src/: main.rs
embassy-tasks/: Cargo.toml
embassy-tasks-channels/: Cargo.toml  README.md
embassy-tasks-channels/src/: main.rs
embassy-tasks/src/: main.rs
freertos-tasks/: Cargo.toml  FreeRTOSConfig.h  README.md  build.rs
freertos-tasks/src/: main.rs
hal-blocking/: Cargo.toml  README.md
hal-blocking/src/: main.rs
mutex-cell/: Cargo.toml  README.md  mods.dot  rust-toolchain.toml
mutex-cell/src/: main.rs
pac-blocking/: Cargo.toml  README.md  rust-toolchain.toml
pac-blocking/src/: main.rs
proto/: Cargo.toml  README.md
proto/src/: actuator.rs  error.rs  lib.rs  sensor.rs
raw-interrupts/: Cargo.toml  README.md
raw-interrupts-pathological/: Cargo.toml  README.md
raw-interrupts-pathological/src/: main.rs
raw-interrupts/src/: main.rs
src/: actuator.rs  error.rs  interface.rs  lib.rs  main.rs  sensor.rs
