[package]
name = "rfb-embassy-select"
version = "0.1.0"
edition = "2021"

[dependencies]
#rfb-proto = { path = "../RFB-proto" }
rfb-proto = { git = "https://github.com/barafael/RFB-proto", features = [
    "sensor",
] }
panic-probe = { version = "0.3.0" }
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embedded-io = "0.3.0"
embassy-futures = { version = "0.1.0" }
defmt = "0.3.0"
defmt-rtt = "0.3.2"
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "nightly",
    "unstable-traits",
    "defmt",
    "stm32f411re",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
cortex-m-rt = "0.7.1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
