[package]
name = "rfb-raw-interrupts"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com"]
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
panic-halt = "0.2.0"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = "0.7.6"
#rfb-proto = { path = "../RFB-proto" }
rfb-proto = { git = "https://github.com/barafael/RFB-proto", features = [
    "sensor",
] }
postcard = "1.0.2"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rt"]
