[package]
name = "counter-peripheral"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
systick-monotonic = "1.0.0"

stm32f4xx-hal = { version = "0.14.0", features = [
    "stm32f411",
    "rt",
    "rtic-monotonic",
] }
