[package]
name = "rfb-rtic-atomic"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com"]
edition = "2021"

[dependencies]
cortex-m-rtic = "1.1.3"
systick-monotonic = "1.0.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = "0.7.6"
rfb-proto = { path = "../proto", features = ["sensor"] }

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rt", "rtic-monotonic"]
