[package]
name = "rfb-freertos-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
rfb-proto = { path = "../proto", features = ["sensor"] }
panic-probe = { version = "0.3.0" }
defmt = "0.3.0"
defmt-rtt = "0.3.2"
freertos-rust = { git = "https://github.com/lobaro/FreeRTOS-rust" }

[build-dependencies]
freertos-cargo-build = { git = "https://github.com/lobaro/FreeRTOS-rust" }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.2" }

[target.thumbv7em-none-eabihf.dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
stm32f4xx-hal = { version = "0.13.2", features = ["rt", "stm32f411"] }
