[package]
name = "rfb-proto"
version = "0.1.0"
edition = "2021"

[features]
actuator = []
sensor = []

[dependencies]
heapless = "0.7.16"
postcard = { version = "1.0.2", features = ["use-defmt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
snafu = { version = "0.7.2", features = [
    "rust_1_46",
], default-features = false }
defmt = "0.3.2"
