[package]
name = "rfb-proto"
version = "0.1.0"
edition = "2021"

[features]
actuator = []
sensor = []
use-defmt = ["dep:defmt", "postcard/use-defmt"]

[dependencies]
heapless = "0.7.16"
postcard = { git = "https://github.com/jamesmunns/postcard" }
serde = { version = "1", default-features = false, features = ["derive"] }
snafu = { version = "0.7.2", features = [
    "rust_1_46",
], default-features = false }
defmt = { version = "0.3.2", optional = true }
